src/main/css/main.css
@import url('https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css');
.hidden {
	display: none;
}

.wrapper {
    padding: 0px;
    font-size: 13px;
    height: 800px;
    width: 100%;
    font-family: 'Open Sans', sans-serif;
    display: inline-block;
    position: absolute;
}

.advanced {
	cursor: pointer;
	padding-right: 10px;
	color: #285f8f;
	text-align: right;
}

.alignCenter {
    text-align: center;
    margin-top: 0px;
    margin-bottom: 0px;
}

.submitButtons {
    margin-right: 10px;
	color: #fff;
    background: #285f8f;
    text-align: center;
    vertical-align: middle;
    padding: 5px 10px 5px 10px;
    font-size: 1em;
    display: inline-block;
}

.submitContainers {
    display: inline-block;
    margin: 5px;
    text-align: right;
    width: 100%;
}

.configurationError {
    color: red;
    text-align: center;
}

.loginContainer {
	width: 100vw;
	height: 100vh;
	display: flex;
    align-items: center;
    justify-content: center;
}

.loginBox {
	background-color: #fff;
    overflow: hidden;
    min-height: 175px;
    box-shadow: 0 0 5px #333;
    max-width: 500px;
    min-width: 300px;
    position: fixed;
    width: 100%;
    border: 0;
    margin-bottom: 20px;
}

.border {
    border: #e6e6e6 1px solid;
}

.alertHeader {
    height: 100px;
    line-height: 100px;
    text-align: center;
    font-size: 2.5em;
    padding-top: 50px;
}

.alertHeaderTag {
    margin: 0 auto;
    padding-top: 10px;
}

.table {
	display: table;
    margin: 0 auto;
}

.tableBorder {
    composes: border;
    margin: 0 auto;
    margin-top: 10px;
    width: 75%;
    height: 100%;
    padding: 10px;
    background-color: white;
    position: relative;
    overflow: hidden;
}

